tests/suite/snapshots/suite__analyze__pass_one_receieve_one-2.snap
---
source: tests/suite/analyze.rs
assertion_line: 109
expression: live_ranges
---
rsp          enter:
┊              mov _x, 5
┊   _x         mov rdi, _x
┊   |   rdi    call black_box
┊   |   rax    mov _x, rax
┊   ●   |      mov rax, _x
┊       |      jmp exit
┊       |    exit:
C       ●      ret

