tests/suite/snapshots/suite__analyze__propagate_liveness_memory-2.snap
---
source: tests/suite/analyze.rs
assertion_line: 227
expression: live_ranges
---
rsp      enter:
|          mov _x, 1
|   _x     mov _x, [_x]
|   ●      mov rax, _x
|   rax    jmp exit
|   |    exit:
●   ●      ret

