tests/suite/snapshots/suite__analyze__propagate_liveness_memory.snap
---
source: tests/suite/analyze.rs
assertion_line: 227
expression: live_variables
---

 propagate_liveness_memory

      +--------------+
      |    enter:    |
      | {rsp}        |
      | mov _x, 1    |
      | {rsp, _x}    |
      | mov _x, [_x] |
      | {rsp, _x}    |
      | mov rax, _x  |
      | {rax, rsp}   |
      | jmp exit     |
      | {rax, rsp}   |
      +--------------+
        |
        |
        v
      +--------------+
      |    exit:     |
      | {rax, rsp}   |
      | ret          |
      | {}           |
      +--------------+

