tests/suite/snapshots/suite__analyze__propagate_liveness_neg.snap
---
source: tests/suite/analyze.rs
assertion_line: 217
expression: live_variables
---

 propagate_liveness_neg

     +-------------+
     |   enter:    |
     | {rsp}       |
     | mov _x, 1   |
     | {rsp, _x}   |
     | neg _x      |
     | {rsp, _x}   |
     | neg _x      |
     | {rsp, _x}   |
     | neg _x      |
     | {rsp, _x}   |
     | mov rax, _x |
     | {rax, rsp}  |
     | jmp exit    |
     | {rax, rsp}  |
     +-------------+
       |
       |
       v
     +-------------+
     |    exit:    |
     | {rax, rsp}  |
     | ret         |
     | {}          |
     +-------------+

